# crank-rhythm

./: .gitignore  CMakeLists.txt  README.md  index.js  simple.css  styles.css  vendor.yml
Source/: blocks.fnt  pdex.dylib  pdxinfo  song.4t  x.aseprite
Source/card/card-highlighted/: animation.txt
Source/fonts/: Basic.fnt
Source/songs/Believe - Teminite/: beatmap.txt
Source/songs/Casual Birder - Max Coburn/: beatmap.txt
Source/songs/Mob - E ve/: beatmap.txt
Source/songs/Shelter - Porter R & Madeon/: beatmap.txt
Source/songs/Spider Dance - Shirobon Remix/: beatmap.txt
Source/songs/psychogenesis/: beatmap
editor/: help.html  index.html  index.js  simple.css
editor/public/: index.html  index.js
misc/: 4tune_concept.aseprite  loader_image.aseprite
misc/in_progress/Mob - E ve/: beatmap.txt
misc/in_progress/Psychogenesis/: beatmap.txt
public/: index.js  ws.js
src/: beatmap.c  beatmap.h  drawing.c  drawing.h  game.c  game.h  main.c  menu.h  particles.c  particles.h  rhythm_player.c  rhythm_player.h  scene.c  scene.h  song.c  song.h  song_player.c  song_player.h  ui.h  utils.c  utils.h
src/scenes/: menu.c  menu.h  song.c  song.h  song_list.c  song_list.h  tutorial.c  tutorial.h
